traefik/traefik_web_ui_service_and_ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-svc
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik
  ports:
    - protocol: TCP
      name: web
      port: 8000
    - protocol: TCP
      name: admin
      port: 8080
    - protocol: TCP
      name: websecure
      port: 4443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: traefik-svc
            port: 
              name: admin
